refactor: 플레이어 순서 유지되도록 수정
Signed-off-by: 2Jaeheon <jaeheon0826@jbnu.ac.kr>